--- a/fly.toml
+++ b/fly.toml
@@ -11,3 +11,10 @@ kill_timeout = 5
 
   [[services.ports]]
     port = 53
+
+[[services]]
+  internal_port = 53
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 53
